--- a/app/assets/stylesheets/avalon.css.scss
+++ b/app/assets/stylesheets/avalon.css.scss
@@ -171,20 +171,14 @@ tr.active-false td {
  *  Overridding Blacklight's brand logo
  */
 .navbar .brand {
-  height: $navbarHeight;
-  padding: 0 $gridGutterWidth;
-  /**
-   *  Copied in from blacklight due to this commit https://github.com/projectblacklight/blacklight/commit/43b49ede7072b95cd2f9d1e09cd8e5312670c7b1
-   */
-  width: 87px;
-  background:transparent asset_url($logo_image,image) no-repeat top left;
-  display: inline-block;
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  padding-right:0;
-  margin-right:20px;
-  padding-left: 0;
+  display: block;
+  float: left;
+  padding: 15px 20px 10px;
+  margin-left: -20px;
+  font-size: 24px;
+  font-weight: 200;
+  color: #ffffff;
+  font-family: "trajan-pro","Trajan Pro","Trajan",Georgia,serif;
 }
 
 /**
