--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -17,57 +17,74 @@ Unless required by applicable law or agreed to in writing, software distributed
   Collections
 <% end %>
 
-<div class='container'>
+<div class="row span12">
+<div class="widget stacked widget-table action-table">
   <% unless @collections.empty? %>
-    <h2>My Collections</h2>
 
-    <table class='table table-striped'>
+  <div class="widget-header">
+    <i class="icon-th-list"></i>
+    <h3>My Collections</h3>
+  </div> <!-- /widget-header -->
+
+  <div class="widget-content">
+
+    <table class="table table-striped table-bordered">
+      <thead>
+      <tr>
+        <th>Collection Name</th>
+        <th>Collection Size</th>
+        <th>Managers</th>
+        <th>Description</th>
+        <th class="td-actions">Actions</th>
+      </tr>
+      </thead>
       <tbody>
       <% @collections.to_a.each do |collection| %>
-        <tr>
-          <td> <%= link_to collection.name, admin_collection_path(collection) %> </td>
-          <td> <%= link_to(pluralize(collection.media_objects.size, 'item'), catalog_index_path('f[collection_ssim][]' => collection.name)) %>
-							<% unpublishedCount = MediaObject.find("collection_ssim" => collection.name, 'workflow_published_sim' => "Unpublished").count%>
-							<% if unpublishedCount > 0 %>
-									<%=link_to("(#{unpublishedCount} unpublished)", catalog_index_path('f[collection_ssim][]' => collection.name, 'f[workflow_published_sim][]' => "Unpublished")) %>
-							<% end %>
-					</td>
-          <td> <%= pluralize(collection.managers.size, 'manager') %> </td>
-          <td> <%= collection.description %> </td>
-          <td>
-            <% if can?(:destroy, collection) %>
+      <tr>
+        <td> <%= link_to collection.name, admin_collection_path(collection) %> </td>
+        <td> <%= link_to(pluralize(collection.media_objects.size, 'item'), catalog_index_path('f[collection_ssim][]' => collection.name)) %>
+          <% unpublishedCount = MediaObject.find("collection_ssim" => collection.name, 'workflow_published_sim' => "Unpublished").count%>
+          <% if unpublishedCount > 0 %>
+              <%=link_to("(#{unpublishedCount} unpublished)", catalog_index_path('f[collection_ssim][]' => collection.name, 'f[workflow_published_sim][]' => "Unpublished")) %>
+          <% end %>
+        </td>
+        <td> <%= pluralize(collection.managers.size, 'manager') %> </td>
+        <td> <%= collection.description %> </td>
+        <td class="td-actions">
+          <% if can?(:destroy, collection) %>
               <%= link_to('Delete', remove_admin_collection_path(collection), class: 'btn btn-mini btn-danger') %>
-            <% else %>
+          <% else %>
               &nbsp;
-            <% end %>
-          </td>
-        </tr>
+          <% end %>
+        </td>
+      </tr>
       <% end %>
       </tbody>
     </table>
-    <%= link_to('Create Collection', new_admin_collection_path, remote: true, modal: true, class: 'btn btn-primary') unless cannot? :create, Admin::Collection %>
+  </div> <!-- /widget-content -->
+</div> <!-- /widget -->
+      <hr />
+      <%= link_to('Create Collection', new_admin_collection_path, remote: true, modal: true, class: 'btn btn-primary') unless cannot? :create, Admin::Collection %>
   <% else %>
-    <div class="hero-unit">
-      <h2>You don't have any collections yet</h2>
+      <div class="hero-unit">
+        <h2>You don't have any collections yet</h2>
 
-      <% if can? :create, Admin::Collection %>
-        <p>Would you like to create one?</p>
-        <div class="whitespace"></div>
-        <p>
-          <%= link_to('Create Collection', new_admin_collection_path, remote: true, modal: true, class: 'btn btn-primary btn-large')  %>
-        </p>
-      <% else %>
-        <p>You'll need to be assigned to one</p>
-      <% end %>
+        <% if can? :create, Admin::Collection %>
+            <p>Would you like to create one?</p>
+            <div class="whitespace"></div>
+            <p>
+              <%= link_to('Create Collection', new_admin_collection_path, remote: true, modal: true, class: 'btn btn-primary btn-large')  %>
+            </p>
+        <% else %>
+            <p>You'll need to be assigned to one</p>
+        <% end %>
 
-    </div>
+      </div>
   <% end %>
-
-</div>
-
 
 <% content_for :page_scripts do %>
   <script>
     new ModalLogic()
   </script>
 <% end %>
+</div>
