--- a/app/views/modules/_footer.html.erb
+++ b/app/views/modules/_footer.html.erb
@@ -7,22 +7,78 @@ You may obtain a copy of the License at
 
 http://www.apache.org/licenses/LICENSE-2.0
 
-Unless required by applicable law or agreed to in writing, software distributed 
+Unless required by applicable law or agreed to in writing, software distributed
   under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
-  CONDITIONS OF ANY KIND, either express or implied. See the License for the 
+  CONDITIONS OF ANY KIND, either express or implied. See the License for the
   specific language governing permissions and limitations under the License.
 ---  END LICENSE_HEADER BLOCK  ---
 %>
-   <div class="container-fluid">
-	  <footer>
-	   <ul>
-	   	 <li><%= image_tag "AvalonMediaSystem_Logo_A.png", alt: "Avalon Media System - #{t(:release_label)} #{Avalon::VERSION}" %>
-	     <li><a href="http://www.avalonmediasystem.org">Avalon Media System Project Website</a> </li>
-	     <li><%= link_to "Contact Us", comments_path %></li>
-	   </ul>
-	   <div class="release">
-	   	<%=release_text%>
-	   	<%= git_commit_info(" (%s %s [%s])") if Rails.env == 'development' %>
-	   </div>
-       </footer>
+
+<br>
+<div id="footer">
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span12 offset1">
+      <div class="span3">
+        <ul class="unstyled">
+          <li><a href="#">Hours</a></li>
+          <li><a href="#">Staff Directory</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Fellowships & Internships</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Site Feedback</a></li>
+
+        </ul>
+      </div>
+      <div class="span3">
+        <ul class="unstyled">
+          <li>Using the Library<li>
+          <li><a href="#">Library Use Policies</a></li>
+          <li><a href="#">Off-Grounds Access</a></li>
+          <li><a href="#">Library & ITS Accounts</a></li>
+          <li><a href="#">Accessibility Services</a></li>
+        </ul>
+      </div>
+      <div class="span3">
+        <ul class="unstyled">
+          <li>Initiatives<li>
+          <li><a href="#">Libra</a></li>
+          <li><a href="#">Project Hydra</a></li>
+        </ul>
+      </div>
+      <div class="span3">
+        <ul class="unstyled">
+          <li>Other Sites<li>
+          <li><a href="#">UVaCollab</a></li>
+          <li><a href="#">SIS</a></li>
+          <li><a href="#">ITS</a></li>
+          <li><a href="#">Cavalier Advantage</a></li>
+          <li><a href="#">U.Va. Home</a></li>
+          <li><a href="#">Library Staff Site</a></li>
+        </ul>
+      </div>
     </div>
+    <div class="row-fluid">
+      <div class="span6 offset3">
+        <hr />
+        <p class="muted">
+          University of Virginia Library, P.O. Box 400113, Charlottesville, VA 22904-4113
+          (Parcel Service Delivery: Alderman Library, 160 McCormick Road, Charlottesville, VA 22903)
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+  <div class="row-fluid">
+    <div class="span10 offset1">
+        <p class="muted">
+          <img src="http://search.lib.virginia.edu/images/federal_lib_logo.png">
+          This library is a Congressionally designated depository for U.S. Government documents.
+          Public access to the Government documents is guaranteed by public law.
+        </p>
+    </div>
+  </div>
+</div>
+</div>
+
