--- a/app/views/modules/_global_navigation.html.erb
+++ b/app/views/modules/_global_navigation.html.erb
@@ -16,7 +16,8 @@ Unless required by applicable law or agreed to in writing, software distributed
 <!-- This should really be rewritten so that the ingest links are not even
      delivered to mobile devices instead of just hidden but that requires
      looking into methods for server side detection -->
-<div class="navbar">
+
+<div class="navbar navbar-inverse nav">
   <div class="navbar-inner">
     <div class="container">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -24,34 +25,46 @@ Unless required by applicable law or agreed to in writing, software distributed
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-
-
+      <a class="brand" href="/">AVALON <small class="subtitle">Audio & Video Search</small></a>
       <%= link_to '', root_path, class: 'brand hidden-desktop' %>
       <div class="nav-collapse collapse">
         <ul class="nav">
+          <li class="divider-vertical"></li>
           <li><%= link_to 'Browse', catalog_index_path(search_field: 'all_fields', utf8: '✓', q: '') %></li>
           <% if can? :read, Admin::Collection %>
-            <li class=<%= active_for_controller('admin/collections') %>><%= link_to 'Manage Content', admin_collections_path %></li>
+              <li class=<%= active_for_controller('admin/collections') %>><%= link_to 'Manage Content', admin_collections_path %></li>
           <% end %>
 
           <% if can? :manage, Admin::Group %>
-            <li class=<%= active_for_controller('admin/groups') %>><%= link_to 'Manage Groups', admin_groups_path, target: '_admin' %></li>
+              <li class=<%= active_for_controller('admin/groups') %>><%= link_to 'Manage Groups', admin_groups_path, target: '_admin' %></li>
           <% end %>
           <% if user_session && user_session[:lti_group] %>
             <li><%= link_to(vgroup_display(user_session[:lti_group]), catalog_index_path('f[read_access_virtual_group_ssim][]' => user_session[:lti_group])) %></li>
           <% end %>
-       </ul>        
-      <form action="/" method="get" class="navbar-search pull-right">
-        <input type="text" class="search-query" name="q" placeholder="Search">
-      </form>
-      <ul class="nav hidden-desktop">
-        <li class="divider" />
-        <%= link_to_if user_signed_in?, 'Sign out', destroy_user_session_path do %>
-          <%# Fallback if the test above fails %>
-          <%= link_to 'Sign in', new_user_session_path %>
-        <% end %>
-      </ul>
-    </div>
+          <form action="/" method="get" class="navbar-search pull-right">
+            <input type="text" class="search-query" name="q" placeholder="Search">
+          </form>
+
+        </ul>
+        <div class="pull-right">
+          <ul class="nav pull-right">
+
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%=user_key %> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/user/preferences"><i class="icon-cog"></i> Preferences</a></li>
+                <li><a href="/help/support"><i class="icon-envelope"></i> Contact Support</a></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to_if user_signed_in?, 'Sign out', destroy_user_session_path do %>
+                      <%# Fallback if the test above fails %>
+                      <i class="icon-off"></i>
+                      <%= link_to 'Sign in', new_user_session_path %>
+                  <% end %>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
+    </div>
   </div>
 </div>
