--- a/app/views/modules/_header.html.erb
+++ b/app/views/modules/_header.html.erb
@@ -13,26 +13,16 @@ Unless required by applicable law or agreed to in writing, software distributed
   specific language governing permissions and limitations under the License.
 ---  END LICENSE_HEADER BLOCK  ---
 %>
-  <div class="custom-header">
-    <div class="container-fluid">
-      <div class="row-fluid whitespace-half">
-      <header class="span12">
-        <div class="logo span2">
-        <%= link_to root_path do %>
-          <%= image_tag "Home.png", alt: "Avalon Media System - #{t(:release_label)} #{Avalon::VERSION}" %>
-        <% end %>
-        </div>
-        
-        <!-- <div class="span6">
-          <h1>Avalon Media System</h1>
-          <p class="lead"><%=release_text%></p>
-        </div>    -->
 
-        <%# By default shift log in / log out to the header %>
-        <div class="pull-right log-in-out">
-          <%= render 'modules/user_management' %>
-        </div>
-      </header>
+
+<div class="lib_banner_container">
+  <div class="lib_banner container_24">
+    <div id="uva_lib_logo" class="grid_14 alpha">
+      <a href="http://www.library.virginia.edu/">
+        <img src="http://search.lib.virginia.edu/images/uva_lib_logo.png" width="200" height="15" alt="University of Virginia Library">
+      </a>
+      <div class="portal_status">
       </div>
-    </div>
-  </div>
+    </div> <!-- end #uva_lib_logo -->
+  </div> <!-- end .lib_banner -->
+</div>
