--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -22,7 +22,7 @@ Unless required by applicable law or agreed to in writing, software distributed
 </div>
 <% end %>
 
-<h2>Sample Content</h2>
+<h2>Browse Our Collections</h2>
 
 <ul class="thumbnails">
   <li class="span3"><h5>Featured Collection</h5><a href="#" class="thumbnail"><%= image_tag "Nutcracker-Ballet.png", alt: "Featured Collection" %></a></li>
