--- a/app/views/modules/_global_navigation.html.erb
+++ b/app/views/modules/_global_navigation.html.erb
@@ -48,19 +48,25 @@ Unless required by applicable law or agreed to in writing, software distributed
         </ul>
         <div class="pull-right">
           <ul class="nav pull-right">
-
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%=user_key %> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="/user/preferences"><i class="icon-cog"></i> Preferences</a></li>
-                <li><a href="/help/support"><i class="icon-envelope"></i> Contact Support</a></li>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to_if user_signed_in?, 'Sign out', destroy_user_session_path do %>
-                      <%# Fallback if the test above fails %>
-                      <%= link_to 'Sign in', new_user_session_path %>
-                  <% end %>
-              </ul>
-            </li>
+            <% if user_signed_in? %>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                 <%=user_key %>
+                  <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/user/preferences"><i class="icon-cog"></i> Preferences</a></li>
+                    <li><a href="/help/support"><i class="icon-envelope"></i> Contact Support</a></li>
+                    <li class="divider"></li>
+                    <li>
+                      <%= link_to_if user_signed_in?, 'Sign out', destroy_user_session_path do %>
+                          <%# Fallback if the test above fails %>
+                          <%= link_to 'Sign in', new_user_session_path %>
+                      <% end %>
+                    </li>
+                  </ul>
+                </li>
+            <% else %>
+                <li><%= link_to 'Sign in', new_user_session_path %></li>
+            <% end %>
           </ul>
         </div>
       </div>
