--- a/app/views/modules/_header.html.erb
+++ b/app/views/modules/_header.html.erb
@@ -26,3 +26,14 @@ Unless required by applicable law or agreed to in writing, software distributed
     </div> <!-- end #uva_lib_logo -->
   </div> <!-- end .lib_banner -->
 </div>
+
+<style>
+    @media (max-width: 767px) {
+        .lib_banner_container {
+            margin-left: -20px;
+            margin-right: -20px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+    }
+</style>
