Responsive design improvements.

--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -61,7 +61,7 @@ Unless required by applicable law or agreed to in writing, software distributed
 </div> <!-- /widget -->
       <hr />
       <%= link_to('Create Collection', new_admin_collection_path, remote: true, modal: true, class: 'btn btn-primary') unless cannot? :create, Admin::Collection %>
-  <br />
+  <div class="spacer"></div>
 
   <% else %>
       <div class="hero-unit">
@@ -87,3 +87,9 @@ Unless required by applicable law or agreed to in writing, software distributed
   </script>
 <% end %>
 </div>
+
+<style>
+    .spacer {
+        margin: 20px 0;
+    }
+</style>
