responsive changes and additions to footer

--- a/app/views/admin/groups/_form.html.erb
+++ b/app/views/admin/groups/_form.html.erb
@@ -38,8 +38,8 @@ Unless required by applicable law or agreed to in writing, software distributed
 <% end %>
 
 <%= form_tag update_users_admin_group_path, method: :put do %>
-  <div> 
-      <table class="table table-striped">
+  <div class="widget-content">
+      <table class="table table-striped table-bordered">
         <thead>
           <tr>
             <th><input type="checkbox" class="select-groups"></th>
