--- a/app/views/modules/_global_navigation.html.erb
+++ b/app/views/modules/_global_navigation.html.erb
@@ -32,11 +32,11 @@ Unless required by applicable law or agreed to in writing, software distributed
           <li class="divider-vertical"></li>
           <li><%= link_to 'Browse', catalog_index_path(search_field: 'all_fields', utf8: '✓', q: '') %></li>
           <% if can? :read, Admin::Collection %>
-              <li class=<%= active_for_controller('admin/collections') %>><%= link_to 'Manage Content', admin_collections_path %></li>
+              <li class=<%= active_for_controller('admin/collections') %>><%= link_to 'Content', admin_collections_path %></li>
           <% end %>
 
           <% if can? :manage, Admin::Group %>
-              <li class=<%= active_for_controller('admin/groups') %>><%= link_to 'Manage Groups', admin_groups_path, target: '_admin' %></li>
+              <li class=<%= active_for_controller('admin/groups') %>><%= link_to 'Groups', admin_groups_path, target: '_admin' %></li>
           <% end %>
           <% if user_session && user_session[:virtual_groups].present? %>
               <% user_session[:virtual_groups].each do |vgroup| %>
