--- a/app/views/modules/_global_navigation.html.erb
+++ b/app/views/modules/_global_navigation.html.erb
@@ -85,3 +85,13 @@ Unless required by applicable law or agreed to in writing, software distributed
     </div>
   </div>
 </div>
+ <style>
+     .navbar-inverse .nav-collapse .nav>li>a, .navbar-inverse .nav-collapse .dropdown-menu a {
+         color:white;
+     }
+     .navbar-inverse .nav-collapse .navbar-search {
+         border-top-color: white;
+         border-bottom-color: white;
+     }
+
+ </style>
