--- a/app/views/modules/_access_object.html.erb
+++ b/app/views/modules/_access_object.html.erb
@@ -42,7 +42,7 @@ Unless required by applicable law or agreed to in writing, software distributed
     <%= submit_tag "Add", name: "submit_add_#{access_object}",
         disabled: input_disabled %>
     <%#----------- Access item list --------------- %>
-    <table class="table table-striped table-hover" style="margin-top:6px;">
+    <table class="table table-striped table-hover table-bordered" style="margin-top:6px;">
       <% unless members.empty? %>
       <tbody
         <% members.each do |member_object| %>
