--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -29,7 +29,7 @@ Unless required by applicable law or agreed to in writing, software distributed
 <p>Avalon houses audio and video collections. Use the search box, or browse using the terms on the left side to discover content. Some content is only available when you sign in.  Sign in with your ID and passphrase.</p>
 <hr />
 <ul class="thumbnails">
-  <li class="span5"><h5>Featured Collection</h5><a href="http://avalon.lib.virginia.edu/catalog?f%5Bcollection_ssim%5D%5B%5D=Virtual+Library+of+Virginia+PBS+Video&q=&search_field=all_fields&utf8=%E2%9C%93" class="thumbnail"><%= image_tag "pbs.png", alt: "Featured Collection" %></a></li>
+  <li class="span5"><h5>Featured Collection</h5><a href="catalog?f%5Bcollection_ssim%5D%5B%5D=Virtual+Library+of+Virginia+PBS+Video&q=&search_field=all_fields&utf8=%E2%9C%93" class="thumbnail"><%= image_tag "pbs.png", alt: "Featured Collection" %></a></li>
   <%#
     <li class="span2"><h5>Featured Video</h5><a href="#" class="thumbnail"></a></li>
     <li class="span2"><h5>Featured Audio</h5><a href="#" class="thumbnail"></a></li>
