Updated featured collection link to be relative.

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -17,20 +17,7 @@ Unless required by applicable law or agreed to in writing, software distributed
 <div id="featured_content" class="row">
   <div class="col-md-4">
     <h4>Featured Collection</h4>
-    <a href="#">
-      <%= image_tag "Nutcracker-Ballet.png", alt: "Featured Collection" %>
-    </a>
-  </div>
-  <div class="col-md-4">
-    <h4>Featured Video</h4>
-     <a href="#">
-        <%= image_tag "Charlie-McCarthy.png", alt: "Featured Collection" %>
-      </a>
-  </div>
-  <div class="col-md-4">
-    <h4>Featured Audio</h4>
-    <a href="#">
-      <%= image_tag "Chucky-Lou.png", alt: "Featured Collection" %></a></li>
+    <a href="catalog?f%5Bcollection_ssim%5D%5B%5D=Virtual+Library+of+Virginia+PBS+Video&q=&search_field=all_fields&utf8=%E2%9C%93" class="thumbnail"><%= image_tag "pbs.png", alt: "Featured Collection" %></a>
   </div>
 </div>
 <h4>Using the System</h4>
