user interface changes for avalon jan release

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -13,7 +13,7 @@ Unless required by applicable law or agreed to in writing, software distributed
   specific language governing permissions and limitations under the License.
 ---  END LICENSE_HEADER BLOCK  ---
 %>
-<h2 id="featured_content_header">Sample Content</h2>
+<h2 id="featured_content_header">Browse Our Collections</h2>
 <div id="featured_content" class="row">
   <div class="col-md-4">
     <h4>Featured Collection</h4>
