AST-34: Added support for arbitrary personal names.

--- a/app/views/media_objects/_metadata_display.html.erb
+++ b/app/views/media_objects/_metadata_display.html.erb
@@ -34,6 +34,7 @@ Unless required by applicable law or agreed to in writing, software distributed
   </dd>
   <% end %>
   <%= display_metadata('Contributor', @mediaobject.contributor) %>
+  <%= display_metadata('Personal Names', display_other_name(@mediaobject)) %>
   <%= display_metadata('Publisher', @mediaobject.publisher) %>
   <%= display_metadata('Genre', @mediaobject.genre) %>
   <%= display_metadata('Subject', @mediaobject.subject) %>
